# GhostOSINT

./: Cargo.toml
src/: main.rs
src/agent/: prompt.rs
src/config/: settings.rs
src/modules/: mod.rs  url_builder.rs  websearch.rs
src/planner/: decision.rs  mod.rs  query_builder.rs
src/utils/: banner.rs  clean_output.rs  llm.rs  mod.rs
