[package]
name = "ghostosint"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
term_size = "0.3"
urlencoding = "2.1.3"
scraper = "0.18"
langchain-rust = "4.6.0"